--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ certifi==2017.7.27.1
 cffi==1.11.2
 chardet==3.0.4
 constantly==15.1.0
-cryptography==2.1.2
+cryptography==2.1.3
 cssselect==1.0.1
 defusedxml==0.5.0
 Django==1.11.6
@@ -14,7 +14,7 @@ gunicorn==19.7.1
 hyperlink==17.3.1
 idna==2.6
 incremental==17.5.0
-lxml==4.1.0
+lxml==4.1.1
 oauthlib==2.0.6
 parsel==1.2.0
 psycopg2==2.7.3.2
@@ -23,12 +23,15 @@ pyasn1-modules==0.1.5
 pycparser==2.18
 PyDispatcher==2.0.5
 pyOpenSSL==17.3.0
+pypiwin32==220
 python3-openid==3.1.0
 pytz==2017.3
 queuelib==1.4.2
 requests==2.18.4
 requests-oauthlib==0.8.0
 Scrapy==1.4.0
+scrapy-djangoitem==1.1.1
+scrapy-random-useragent==0.2
 service-identity==17.0.0
 six==1.11.0
 Twisted==17.9.0
