--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cssselect==1.0.1
 defusedxml==0.5.0
 Django==1.11.7
 django-allauth==0.34.0
+django-extensions==1.9.7
 gunicorn==19.7.1
 hyperlink==17.3.1
 idna==2.6
@@ -34,6 +35,7 @@ scrapy-random-useragent==0.2
 service-identity==17.0.0
 six==1.11.0
 Twisted==17.9.0
+typing==3.6.2
 urllib3==1.22
 w3lib==1.18.0
 zope.interface==4.4.3
