--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,34 @@
 asn1crypto==0.23.0
-attrs==17.2.0
+astroid==1.5.3
+attrs==17.3.0
 Automat==0.6.0
-certifi==2017.7.27.1
+certifi==2017.11.5
 cffi==1.11.2
 chardet==3.0.4
 constantly==15.1.0
-cryptography==2.1.3
+cryptography==2.1.4
 cssselect==1.0.1
 defusedxml==0.5.0
-Django==1.11.7
+Django==2.0
 django-allauth==0.34.0
-django-extensions==1.9.7
+django-extensions==1.9.8
 gunicorn==19.7.1
 hyperlink==17.3.1
 idna==2.6
 incremental==17.5.0
+isort==4.2.15
+lazy-object-proxy==1.3.1
 lxml==4.1.1
+mccabe==0.6.1
 oauthlib==2.0.6
 parsel==1.2.0
 psycopg2==2.7.3.2
-pyasn1==0.3.7
-pyasn1-modules==0.1.5
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
 pycparser==2.18
 PyDispatcher==2.0.5
-pyOpenSSL==17.3.0
+pylint==1.7.5
+pyOpenSSL==17.5.0
 python3-openid==3.1.0
 pytz==2017.3
 queuelib==1.4.2
@@ -38,4 +43,5 @@ Twisted==17.9.0
 typing==3.6.2
 urllib3==1.22
 w3lib==1.18.0
+wrapt==1.10.11
 zope.interface==4.4.3
