--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Automat==0.6.0
 certifi==2017.11.5
 cffi==1.11.2
 chardet==3.0.4
+colorama==0.3.9
 constantly==15.1.0
 cryptography==2.1.4
 cssselect==1.0.1
@@ -29,6 +30,7 @@ pycparser==2.18
 PyDispatcher==2.0.5
 pylint==1.7.5
 pyOpenSSL==17.5.0
+python-dateutil==2.6.1
 python3-openid==3.1.0
 pytz==2017.3
 queuelib==1.4.2
