--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,9 @@ pycparser==2.18
 PyDispatcher==2.0.5
 pylint==1.7.5
 pyOpenSSL==17.5.0
+pypiwin32==220
 python-dateutil==2.6.1
+python-http-client==3.0.0
 python3-openid==3.1.0
 pytz==2017.3
 queuelib==1.4.2
@@ -39,6 +41,8 @@ requests-oauthlib==0.8.0
 Scrapy==1.4.0
 scrapy-djangoitem==1.1.1
 scrapy-random-useragent==0.2
+sendgrid==3.6.5
+sendgrid-django==4.2.0
 service-identity==17.0.0
 six==1.11.0
 Twisted==17.9.0
