--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ defusedxml==0.5.0
 Django==2.0
 django-allauth==0.34.0
 django-extensions==1.9.8
+fake-useragent==0.1.8
 gunicorn==19.7.1
 hyperlink==17.3.1
 idna==2.6
