--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,46 @@
-asn1crypto==0.23.0
-astroid==1.5.3
-attrs==17.3.0
+asn1crypto==0.24.0
+astroid==1.6.1
+attrs==17.4.0
 Automat==0.6.0
-certifi==2017.11.5
-cffi==1.11.2
+certifi==2018.1.18
+cffi==1.11.4
 chardet==3.0.4
+click==6.7
 colorama==0.3.9
 constantly==15.1.0
 cryptography==2.1.4
-cssselect==1.0.1
+cssselect==1.0.3
 defusedxml==0.5.0
-Django==2.0
-django-allauth==0.34.0
-django-extensions==1.9.8
+Django==2.0.2
+django-allauth==0.35.0
+django-extensions==1.9.9
 fake-useragent==0.1.8
+first==2.0.1
 gunicorn==19.7.1
 hyperlink==17.3.1
 idna==2.6
 incremental==17.5.0
-isort==4.2.15
+isort==4.3.3
 lazy-object-proxy==1.3.1
 lxml==4.1.1
 mccabe==0.6.1
 oauthlib==2.0.6
-parsel==1.2.0
-psycopg2==2.7.3.2
+parsel==1.4.0
+psycopg2==2.7.4
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycparser==2.18
 PyDispatcher==2.0.5
-pylint==1.7.5
+pylint==1.8.2
 pyOpenSSL==17.5.0
 python-dateutil==2.6.1
 python-http-client==3.0.0
 python3-openid==3.1.0
-pytz==2017.3
+pytz==2018.3
 queuelib==1.4.2
 requests==2.18.4
 requests-oauthlib==0.8.0
-Scrapy==1.4.0
+Scrapy==1.5.0
 scrapy-djangoitem==1.1.1
 scrapy-random-useragent==0.2
 sendgrid==3.6.5
@@ -46,8 +48,8 @@ sendgrid-django==4.2.0
 service-identity==17.0.0
 six==1.11.0
 Twisted==17.9.0
-typing==3.6.2
+typing==3.6.4
 urllib3==1.22
-w3lib==1.18.0
+w3lib==1.19.0
 wrapt==1.10.11
 zope.interface==4.4.3
