--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-allauth==0.35.0
 django-extensions==2.0.6
 fake-useragent==0.1.10
 first==2.0.1
+furl==1.0.1
 gunicorn==19.7.1
 hyperlink==18.0.0
 idna==2.6
@@ -25,6 +26,7 @@ lazy-object-proxy==1.3.1
 lxml==4.2.0
 mccabe==0.6.1
 oauthlib==2.0.6
+orderedmultidict==0.7.11
 parsel==1.4.0
 psycopg2==2.7.4
 pyasn1==0.4.2
