--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asn1crypto==0.24.0
-astroid==1.6.2
+astroid==1.6.3
 attrs==17.4.0
 Automat==0.6.0
 certifi==2018.1.18
@@ -8,14 +8,15 @@ chardet==3.0.4
 click==6.7
 colorama==0.3.9
 constantly==15.1.0
-cryptography==2.1.4
+cryptography==2.2.2
 cssselect==1.0.3
+decorator==4.2.1
 defusedxml==0.5.0
-Django==2.0.3
+Django==2.0.4
 django-allauth==0.35.0
 django-debug-toolbar==1.9.1
 django-extensions==2.0.6
-django-haystack==2.8.0
+django-haystack==2.8.1
 django-haystack-elasticsearch==0.1.0
 elasticsearch==5.5.2
 fake-useragent==0.1.10
@@ -25,25 +26,32 @@ gunicorn==19.7.1
 hyperlink==18.0.0
 idna==2.6
 incremental==17.5.0
+ipython-genutils==0.2.0
 isort==4.3.4
+jsonschema==2.6.0
+jupyter-core==4.4.0
 lazy-object-proxy==1.3.1
-lxml==4.2.0
+lxml==4.2.1
 mccabe==0.6.1
-oauthlib==2.0.6
+nbformat==4.4.0
+oauthlib==2.0.7
 orderedmultidict==0.7.11
 parsel==1.4.0
+plotly==2.5.1
 psycopg2==2.7.4
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycparser==2.18
 PyDispatcher==2.0.5
-pylint==1.8.3
+pylint==1.8.4
 pyOpenSSL==17.5.0
-python-dateutil==2.7.0
+pypiwin32==223
+python-dateutil==2.7.2
 python-http-client==3.0.0
 python-memcached==1.59
 python3-openid==3.1.0
 pytz==2018.3
+pywin32==223
 queuelib==1.5.0
 requests==2.18.4
 requests-oauthlib==0.8.0
@@ -54,6 +62,7 @@ sendgrid-django==4.2.0
 service-identity==17.0.0
 six==1.11.0
 sqlparse==0.2.4
+traitlets==4.3.2
 Twisted==17.9.0
 typing==3.6.4
 urllib3==1.22
