--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asn1crypto==0.24.0
-astroid==1.6.5
+astroid==2.0
 attrs==18.1.0
 Automat==0.7.0
 certifi==2018.4.16
@@ -12,17 +12,18 @@ cryptography==2.2.2
 cssselect==1.0.3
 decorator==4.3.0
 defusedxml==0.5.0
-Django==2.0.6
+Django==2.0.7
 django-allauth==0.36.0
 django-debug-toolbar==1.9.1
-django-extensions==2.0.7
+django-extensions==2.1.0
 django-haystack==2.8.1
 django-haystack-elasticsearch==0.1.0
+django-lazysignup==1.1.2
 elasticsearch==5.5.2
 fake-useragent==0.1.10
 first==2.0.1
-furl==1.1
-gunicorn==19.8.1
+furl==1.2
+gunicorn==19.9.0
 hyperlink==18.0.0
 idna==2.7
 incremental==17.5.0
@@ -31,28 +32,29 @@ isort==4.3.4
 jsonschema==2.6.0
 jupyter-core==4.4.0
 lazy-object-proxy==1.3.1
-lxml==4.2.1
+lxml==4.2.3
 mccabe==0.6.1
 nbformat==4.4.0
 oauthlib==2.1.0
 orderedmultidict==1.0
-parsel==1.4.0
+parsel==1.5.0
 psycopg2==2.7.5
 pyasn1==0.4.3
-pyasn1-modules==0.2.1
+pyasn1-modules==0.2.2
 pycparser==2.18
 PyDispatcher==2.0.5
-pylint==1.9.2
+PyHamcrest==1.9.0
+pylint==2.0.0
 pyOpenSSL==18.0.0
 python-dateutil==2.7.3
 python-http-client==3.1.0
 python-memcached==1.59
 python3-openid==3.1.0
-pytz==2018.4
+pytz==2018.5
 queuelib==1.5.0
 requests==2.19.1
 requests-oauthlib==1.0.0
-Scrapy==1.5.0
+Scrapy==1.5.1
 scrapy-random-useragent==0.2
 sendgrid==3.6.5
 sendgrid-django==4.2.0
@@ -60,7 +62,8 @@ service-identity==17.0.0
 six==1.11.0
 sqlparse==0.2.4
 traitlets==4.3.2
-Twisted==18.4.0
+Twisted==18.7.0
+typed-ast==1.1.0
 typing==3.6.4
 urllib3==1.22
 w3lib==1.19.0
