--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,29 @@
+argon2-cffi==18.3.0
 asn1crypto==0.24.0
 astroid==2.0.4
-attrs==18.1.0
+attrs==18.2.0
 Automat==0.7.0
-certifi==2018.8.13
+certifi==2018.8.24
 cffi==1.11.5
 chardet==3.0.4
 click==6.7
 colorama==0.3.9
 constantly==15.1.0
-cryptography==2.3
+cryptography==2.3.1
 cssselect==1.0.3
 decorator==4.3.0
 defusedxml==0.5.0
-Django==2.1
-django-allauth==0.36.0
-django-debug-toolbar==1.9.1
-django-extensions==2.1.0
+Django==2.1.1
+django-allauth==0.37.1
+django-debug-toolbar==1.10.1
+django-extensions==2.1.2
 django-haystack==2.8.1
 django-haystack-elasticsearch==0.1.0
 django-lazysignup==1.1.2
 elasticsearch==5.5.2
 fake-useragent==0.1.10
 first==2.0.1
-furl==1.2
+furl==1.2.1
 gunicorn==19.9.0
 hyperlink==18.0.0
 idna==2.7
@@ -32,7 +33,7 @@ isort==4.3.4
 jsonschema==2.6.0
 jupyter-core==4.4.0
 lazy-object-proxy==1.3.1
-lxml==4.2.4
+lxml==4.2.5
 mccabe==0.6.1
 nbformat==4.4.0
 oauthlib==2.1.0
@@ -46,11 +47,13 @@ PyDispatcher==2.0.5
 PyHamcrest==1.9.0
 pylint==2.1.1
 pyOpenSSL==18.0.0
+pypiwin32==223
 python-dateutil==2.7.3
 python-http-client==3.1.0
 python-memcached==1.59
 python3-openid==3.1.0
 pytz==2018.5
+pywin32==223
 queuelib==1.5.0
 requests==2.19.1
 requests-oauthlib==1.0.0
@@ -64,7 +67,7 @@ sqlparse==0.2.4
 traitlets==4.3.2
 Twisted==18.7.0
 typed-ast==1.1.0
-typing==3.6.4
+typing==3.6.6
 urllib3==1.22
 w3lib==1.19.0
 wrapt==1.10.11
