--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Automat==0.7.0
 certifi==2018.8.24
 cffi==1.11.5
 chardet==3.0.4
-click==6.7
+Click==7.0
 colorama==0.3.9
 constantly==15.1.0
 cryptography==2.3.1
@@ -42,7 +42,7 @@ parsel==1.5.0
 psycopg2==2.7.5
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
-pycparser==2.18
+pycparser==2.19
 PyDispatcher==2.0.5
 PyHamcrest==1.9.0
 pylint==2.1.1
