--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,11 @@ asn1crypto==0.24.0
 astroid==2.0.4
 attrs==18.2.0
 Automat==0.7.0
-certifi==2018.8.24
+certifi==2018.10.15
 cffi==1.11.5
 chardet==3.0.4
 Click==7.0
-colorama==0.3.9
+colorama==0.4.0
 constantly==15.1.0
 cryptography==2.3.1
 cssselect==1.0.3
@@ -19,7 +19,7 @@ django-debug-toolbar==1.10.1
 django-extensions==2.1.3
 django-haystack==2.8.1
 django-haystack-elasticsearch==0.1.0
-django-lazysignup==1.1.2
+django-lazysignup==2.0.0
 elasticsearch==5.5.2
 fake-useragent==0.1.11
 first==2.0.1
@@ -47,13 +47,15 @@ PyDispatcher==2.0.5
 PyHamcrest==1.9.0
 pylint==2.1.1
 pyOpenSSL==18.0.0
+pypiwin32==223
 python-dateutil==2.7.3
 python-http-client==3.1.0
 python-memcached==1.59
 python3-openid==3.1.0
 pytz==2018.5
+pywin32==224
 queuelib==1.5.0
-requests==2.19.1
+requests==2.20.0
 requests-oauthlib==1.0.0
 Scrapy==1.5.1
 scrapy-random-useragent==0.2
@@ -63,7 +65,7 @@ service-identity==17.0.0
 six==1.11.0
 sqlparse==0.2.4
 traitlets==4.3.2
-Twisted==18.7.0
+Twisted==18.9.0
 typed-ast==1.1.0
 typing==3.6.6
 urllib3==1.22
