--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
 argon2-cffi==18.3.0
 asn1crypto==0.24.0
-astroid==2.0.4
+astroid==2.1.0
 attrs==18.2.0
 Automat==0.7.0
-certifi==2018.10.15
+certifi==2018.11.29
 cffi==1.11.5
 chardet==3.0.4
 Click==7.0
-colorama==0.4.0
+colorama==0.4.1
 constantly==15.1.0
-cryptography==2.3.1
+cryptography==2.4.2
 cssselect==1.0.3
 decorator==4.3.0
 defusedxml==0.5.0
 Django==2.1.3
 django-allauth==0.38.0
 django-debug-toolbar==1.10.1
-django-extensions==2.1.3
+django-extensions==2.1.4
 django-haystack==2.8.1
 django-haystack-elasticsearch==0.1.0
 django-lazysignup==2.0.0
@@ -39,19 +39,21 @@ nbformat==4.4.0
 oauthlib==2.1.0
 orderedmultidict==1.0
 parsel==1.5.1
-psycopg2==2.7.6
+psycopg2==2.7.6.1
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
 pycparser==2.19
 PyDispatcher==2.0.5
 PyHamcrest==1.9.0
-pylint==2.1.1
+pylint==2.2.2
 pyOpenSSL==18.0.0
+pypiwin32==223
 python-dateutil==2.7.5
 python-http-client==3.1.0
 python-memcached==1.59
 python3-openid==3.1.0
 pytz==2018.7
+pywin32==224
 queuelib==1.5.0
 requests==2.20.1
 requests-oauthlib==1.0.0
