--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,74 @@
-argon2-cffi==18.3.0
+argon2-cffi==19.1.0
 asn1crypto==0.24.0
-astroid==2.1.0
-attrs==18.2.0
+astroid==2.2.5
+attrs==19.1.0
 Automat==0.7.0
-certifi==2018.11.29
-cffi==1.11.5
+certifi==2019.3.9
+cffi==1.12.2
 chardet==3.0.4
 Click==7.0
 colorama==0.4.1
 constantly==15.1.0
-cryptography==2.4.2
+cryptography==2.6.1
 cssselect==1.0.3
-decorator==4.3.0
+decorator==4.4.0
 defusedxml==0.5.0
-Django==2.1.5
-django-allauth==0.38.0
+Django==2.1.7
+django-allauth==0.39.1
 django-debug-toolbar==1.11
-django-extensions==2.1.4
+django-extensions==2.1.6
 django-haystack==2.8.1
 django-haystack-elasticsearch==0.1.0
 django-lazysignup==2.0.0
 elasticsearch==5.5.3
 fake-useragent==0.1.11
-first==2.0.1
+first==2.0.2
+freeze==1.0.10
 furl==2.0.0
 gunicorn==19.9.0
 hyperlink==18.0.0
 idna==2.8
 incremental==17.5.0
 ipython-genutils==0.2.0
-isort==4.3.4
-jsonschema==2.6.0
+isort==4.3.15
+jsonschema==3.0.1
 jupyter-core==4.4.0
 lazy-object-proxy==1.3.1
-lxml==4.3.0
+lxml==4.3.2
 mccabe==0.6.1
 nbformat==4.4.0
-oauthlib==2.1.0
+oauthlib==3.0.1
 orderedmultidict==1.0
 parsel==1.5.1
-psycopg2==2.7.6.1
+psycopg2==2.7.7
 pyasn1==0.4.5
-pyasn1-modules==0.2.3
+pyasn1-modules==0.2.4
 pycparser==2.19
 PyDispatcher==2.0.5
 PyHamcrest==1.9.0
-pylint==2.2.2
-pyOpenSSL==18.0.0
-python-dateutil==2.7.5
+pylint==2.3.1
+pyOpenSSL==19.0.0
+pyrsistent==0.14.11
+python-dateutil==2.8.0
 python-http-client==3.1.0
 python-memcached==1.59
 python3-openid==3.1.0
 pytz==2018.9
 queuelib==1.5.0
 requests==2.21.0
-requests-oauthlib==1.1.0
-Scrapy==1.5.1
+requests-oauthlib==1.2.0
+Scrapy==1.6.0
 scrapy-random-useragent==0.2
 sendgrid==3.6.5
 sendgrid-django==4.2.0
 service-identity==18.1.0
 six==1.12.0
-sqlparse==0.2.4
+sqlparse==0.3.0
 traitlets==4.3.2
 Twisted==18.9.0
-typed-ast==1.1.1
+typed-ast==1.3.1
 typing==3.6.6
 urllib3==1.24.1
 w3lib==1.20.0
-wrapt==1.11.0
+wrapt==1.11.1
 zope.interface==4.6.0
