--- a/requirements.txt
+++ b/requirements.txt
@@ -29,11 +29,11 @@ hyperlink==18.0.0
 idna==2.8
 incremental==17.5.0
 ipython-genutils==0.2.0
-isort==4.3.15
+isort==4.3.16
 jsonschema==3.0.1
 jupyter-core==4.4.0
 lazy-object-proxy==1.3.1
-lxml==4.3.2
+lxml==4.3.3
 mccabe==0.6.1
 nbformat==4.4.0
 oauthlib==3.0.1
@@ -49,6 +49,7 @@ pylint==2.3.1
 pyOpenSSL==19.0.0
 pyrsistent==0.14.11
 python-dateutil==2.8.0
+python-dotenv==0.10.1
 python-http-client==3.1.0
 python-memcached==1.59
 python3-openid==3.1.0
