--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asn1crypto==0.24.0
 astroid==2.2.5
 attrs==19.1.0
 Automat==0.7.0
+autopep8==1.4.3
 certifi==2019.3.9
 cffi==1.12.2
 chardet==3.0.4
@@ -42,6 +43,7 @@ parsel==1.5.1
 psycopg2==2.7.7
 pyasn1==0.4.5
 pyasn1-modules==0.2.4
+pycodestyle==2.5.0
 pycparser==2.19
 PyDispatcher==2.0.5
 PyHamcrest==1.9.0
@@ -49,7 +51,6 @@ pylint==2.3.1
 pyOpenSSL==19.0.0
 pyrsistent==0.14.11
 python-dateutil==2.8.0
-python-dotenv==0.10.1
 python-http-client==3.1.0
 python-memcached==1.59
 python3-openid==3.1.0
