--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ asn1crypto==0.24.0
 astroid==2.2.5
 attrs==19.1.0
 Automat==0.7.0
-autopep8==1.4.3
+autopep8==1.4.4
 certifi==2019.3.9
-cffi==1.12.2
+cffi==1.12.3
 chardet==3.0.4
 Click==7.0
 colorama==0.4.1
@@ -13,11 +13,11 @@ constantly==15.1.0
 cryptography==2.6.1
 cssselect==1.0.3
 decorator==4.4.0
-defusedxml==0.5.0
-Django==2.1.7
+defusedxml==0.6.0
+Django==2.2.1
 django-allauth==0.39.1
 django-debug-toolbar==1.11
-django-extensions==2.1.6
+django-extensions==2.1.7
 django-haystack==2.8.1
 django-haystack-elasticsearch==0.1.0
 django-lazysignup==2.0.0
@@ -26,50 +26,52 @@ fake-useragent==0.1.11
 first==2.0.2
 furl==2.0.0
 gunicorn==19.9.0
-hyperlink==18.0.0
+hyperlink==19.0.0
 idna==2.8
 incremental==17.5.0
 ipython-genutils==0.2.0
-isort==4.3.16
+isort==4.3.20
 jsonschema==3.0.1
 jupyter-core==4.4.0
-lazy-object-proxy==1.3.1
+lazy-object-proxy==1.4.1
 lxml==4.3.3
 mccabe==0.6.1
 nbformat==4.4.0
 oauthlib==3.0.1
 orderedmultidict==1.0
 parsel==1.5.1
-psycopg2==2.7.7
+pathtools==0.1.2
+psycopg2==2.8.2
 pyasn1==0.4.5
-pyasn1-modules==0.2.4
+pyasn1-modules==0.2.5
 pycodestyle==2.5.0
 pycparser==2.19
 PyDispatcher==2.0.5
 PyHamcrest==1.9.0
 pylint==2.3.1
 pyOpenSSL==19.0.0
-pyrsistent==0.14.11
+pyrsistent==0.15.2
 python-dateutil==2.8.0
 python-http-client==3.1.0
 python-memcached==1.59
 python3-openid==3.1.0
-pytz==2018.9
+pytz==2019.1
+PyYAML==5.1
 queuelib==1.5.0
-requests==2.21.0
+requests==2.22.0
 requests-oauthlib==1.2.0
 Scrapy==1.6.0
 scrapy-random-useragent==0.2
-sendgrid==5.6.0
+sendgrid==6.0.5
 sendgrid-django==4.2.0
 service-identity==18.1.0
 six==1.12.0
 sqlparse==0.3.0
 traitlets==4.3.2
-Twisted==18.9.0
-typed-ast==1.3.1
+Twisted==19.2.0
+typed-ast==1.3.5
 typing==3.6.6
-urllib3==1.24.1
+urllib3==1.25.2
 w3lib==1.20.0
 wrapt==1.11.1
 zope.interface==4.6.0
